# neuro-sym

./: .gitignore  PLAN.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml
docs/: PRD_PLAYGROUND.md  neuro_symbolic_vs_agentic.md
docs/week1/: foundations.md
research/references/: bibliography.md
